--- a/src/App.css
+++ b/src/App.css
@@ -7,8 +7,9 @@
 
 .App {
 	display: flex;
+	flex-direction: column;
 	justify-content: center;
-	align-content: center;
+	align-items: center;
 	font-size: 1.2rem;
 }
 
