--- a/src/App.css
+++ b/src/App.css
@@ -23,8 +23,17 @@
 	margin: 1.5rem;
 }
 
+.nav a {
+	text-decoration: none;
+	color: black;
+}
+
 .nav-menu {
 	display: flex;
 	align-items: center;
 	gap: 0.75rem;
+}
+
+.active {
+	outline: 1px solid black;
 }
